css/styles.css
body {
  font-family: Roboto, sans-serif;
  color: #434455;
  background-color: #fff;
  font-size: 16px;
}

ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
}

a {
  text-decoration: none;
  font-style: normal;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

p {
  margin: 0;
  padding: 0;
}

svg {
  display: block;
}

*:hover *,
*:focus * {
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.16667;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  display: block;
  height: 24px;
}

.accent-logo-piece {
  color: #4d5ae5;
}

.container {
  max-width: 1158px;
  padding-left: 15px;
  padding-right: 15px;
  margin: 0 auto;
}

.section {
  padding-top: 120px;
  padding-bottom: 120px;
}

.links-container {
  display: flex;
}

.links-icons {
  fill: #f4f4fd;
}

.links-items-icon {
  display: block;
  border-radius: 100%;
  background-color: #4d5ae5;
}

.links-items-icon:hover,
.links-items-icon:focus {
  background-color: #404bbf;
}

/* ----------------- HEADER ----------------- */

.header {
  border-bottom: 1px solid #e7e9fc;
  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
}

.header .container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header-logo {
  color: #2e2f42;
  margin-right: 76px;
}

.header-navigation-panel {
  display: flex;
  align-items: center;
}

.header-navigation-panel-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.header-navigation-panel-items {
}

.header-navigation-panel-items-text {
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
  display: block;
  padding-top: 24px;
  padding-bottom: 24px;
  position: relative;
}

.header-underline {
  color: #404bbf;
}

.header-underline::after {
  content: "";
  position: absolute;
  display: block;
  bottom: 0;
  border-radius: 2px;
  width: 48px;
  height: 4px;
  background-color: #404bbf;
}

.header-navigation-panel-items-text:hover,
.header-navigation-panel-items-text:focus {
  color: #404bbf;
}

.header-contacts {
}

.header-contacts-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.header-contacts-items {
}

.header-contacts-items-text {
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.header-contacts-items-text:hover,
.header-contacts-items-text:focus {
  color: #404bbf;
}

/* ----------------- HERO / ORDER SERVICE ----------------- */

.hero {
  background-color: #2e2f42;
  background-image: linear-gradient(
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url(../images/hero-background.jpg);
  background-repeat: no-repeat;
  background-position: center;
  padding-top: 188px;
  padding-bottom: 188px;
}

.hero-heading {
  font-size: 56px;
  max-width: 496px;
  line-height: 1.07143;
  letter-spacing: 0.02em;
  text-align: center;
  color: #fff;
  margin: 0 auto;
  margin-bottom: 48px;
}

.hero-btn {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #fff;
  cursor: pointer;
  background-color: #4d5ae5;
  border: none;
  min-width: 169px;
  height: 56px;
  border-radius: 4px;
  padding: 16px 32px;
  display: block;
  margin: 0 auto;
}

.hero-btn:hover,
.hero-btn:focus {
  background-color: #404bbf;
}

/* ----------------- FEATURES ----------------- */

.features {
}

.features-heading {
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.features-list {
  display: flex;
  gap: 24px;
}

.features-items {
  max-width: calc((100% - 72px) / 4);
}

.features-images-container {
  border: 1px solid #8e8f99;
  border-radius: 4px;
  padding: 23px 99px;
  background-color: #fdf4f7;
  margin-bottom: 8px;
}

.features-items-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.features-items-text {
  line-height: 1.5;
  letter-spacing: 0.02em;
}

/* ----------------- TEAM ----------------- */

.team {
  background-color: #f4f4fd;
}

.team-heading {
  font-size: 36px;
  line-height: 1.11111;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
}

.team-list {
  display: flex;
  gap: 24px;
}

.team-items {
  background-color: #fff;
  width: calc((100% - 72px) / 4);
  border-radius: 0 0 4px 4px;
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.team-items-img {
  display: block;
}

.team-cards-content {
  padding: 32px 16px;
}

.team-items-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 8px;
}

.team-items-text {
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-align: center;
  margin-bottom: 8px;
}

.team-links-container {
  gap: 24px;
}

.team-cards-link {
  padding: 12px;
}

/* ----------------- PORTFOLIO ----------------- */

.portfolio {
}

.portfolio-heading {
  font-size: 36px;
  line-height: 1.11111;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
}

.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  gap: 48px 24px;
}

.portfolio-items {
  height: 420px;
  width: calc((100% - 48px) / 3);
}

.portfolio-items:hover,
.portfolio-items:focus {
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.portfolio-hidden-container {
  position: relative;
  overflow: hidden;
}

.portfolio-items:hover .portfolio-items-hidden-text {
  transform: translateY(0);
}

.portfolio-items-img {
  display: block;
}

.portfolio-items-hidden-text {
  position: absolute;
  top: 0;
  padding: 40px 32px;
  width: 100%;
  height: 100%;
  background-color: #4d5ae5;
  transform: translateY(100%);
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
}

.portfolio-cards-content {
  border-bottom: 1px solid #e7e9fc;
  border-left: 1px solid #e7e9fc;
  border-right: 1px solid #e7e9fc;
  padding: 32px 16px;
}

.portfolio-items-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.portfolio-items-text {
  line-height: 1.5;
  letter-spacing: 0.02em;
}

/* ----------------- FOOTER ----------------- */

.footer {
  background-color: #2e2f42;
  padding-top: 100px;
  padding-bottom: 100px;
}

.footer-flex-container {
  display: flex;
}

.footer-content {
  margin-right: 120px;
}

.footer-logo {
  color: #f4f4fd;
  margin-bottom: 16px;
}

.footer-text {
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
  max-width: 264px;
}

.footer-links {
}

.footer-links-text {
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #fff;
  margin-bottom: 16px;
}

.footer-links-container {
  gap: 16px;
}

.footer-links-icon {
  padding: 8px;
}

